examples/nameresolution/Trait.an
trait Foo a b
    foo: a -> b
    bar: a

impl Foo int string
    foo _x = "test"
    baz = 2  // error: baz not in foo
    // error: missing definition of foo

foo 3
bar : unit

// args: --check
// expected stdout:
// examples/nameresolution/Trait.an: 7,5	error: baz is not required by Foo
//     baz = 2  // error: baz not in foo
// 
// examples/nameresolution/Trait.an: 5,1	error: impl is missing a definition for bar
// impl Foo int string
